[project]
name = "curious-agent"
version = "0.1.0"
description = "Agente de RL usando Sample Factory, VizDoom e Gymnasium"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "gymnasium==0.29.1",
    "vizdoom==1.2.4",
    "torch==2.6.0",
    "opencv-python==4.11.0.86",
    "numpy==1.26.4",
    "tensorboard==2.19.0",
    "protobuf==6.30.2",
]

[tool.uv]  
# O uv vai gerar um uv.lock para travar as dependências exatas

[tool.uv.sources]
# Aponta para a cópia local do Sample Factory (modo editável)
sample-factory = { path = "../sample-factory", editable = true }